<resources>
    <string name="app_name">Exercise_SQLite</string>
    <string name="dk">Daftar Kontak</string>
    <string name="td">Tambah Data</string>
    <string name="nm">Nama</string>
    <string name="mn">Masukkan Nama</string>
    <string name="nt">Nomor Telepon</string>
    <string name="mnt">Masukkan MNomor Telepon</string>
    <string name="em">Email</string>
    <string name="mem">Masukkan Email</string>
    <string name="al">Alamat</string>
    <string name="mal"> Masukkan Alamat</string>
    <string name="save">Simpan</string>


</resources>
