<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahData">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/td"
        android:textColor="#000000" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:id="@+id/pd">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textnm"
                android:layout_width="170dp"
                android:layout_height="38dp"
                android:text="@string/nm"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.192" />

            <EditText
                android:id="@+id/textmnm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:hint="@string/mn"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ttextnt"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/nt"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/textmnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/mnt"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </TableRow>
        <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textem"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/em"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textmem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mem"
            android:inputType="textPersonName"
            android:textColor="#000000" />

    </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textal"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/al"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/textmal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/mal"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pd"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="140dp"
        android:text="@string/save" />


</RelativeLayout>
